<resources>
    <string name="app_name">TFG_Android_app</string>
    <string name="pantalla_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="click_here">Click here</string>
    <string name="login_failed">Login failed</string>
    <string name="reset_email">Email to reset password</string>
    <string name="send">Send</string>
    <string name="wrong_email">Wrong email</string>
    <string name="email_sent">Email sent</string>
    <string name="email_not_sent">The email could not be sent</string>
    <string name="logout">Logout</string>
    <string name="btn_chat">Chat</string>
    <string name="chats_load_failed">Chats load failed</string>
    <string name="btn_new_chat">Chat</string>
    <string name="txt_my_msg">My message</string>
    <string name="txt_other_msg">Other message</string>
    <string name="message">Message</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="profile">My Profile</string>
    <string name="classes">My classes</string>
    <string name="payments">My payments</string>
    <string name="name">Name</string>
    <string name="surname1">Surname 1</string>
    <string name="surname2">Surname 2</string>
    <string name="tlf" translatable="false">Tlf.</string>
    <string name="address">Address</string>
    <string name="membership_number">Membership number</string>
    <string name="btn_editar">Edit</string>
    <string name="btn_guardar">Save</string>
    <string name="empty">Empty</string>
    <string name="btn_cancelar">Cancel</string>
    <string name="btn_docs">Documents</string>
    <string name="btn_notifications">Notifications</string>
    <string name="group_classes">Group classes</string>
    <string name="letter_monday">M</string>
    <string name="letter_tuesday">T</string>
    <string name="letter_wednesday">W</string>
    <string name="letter_thursday">T</string>
    <string name="letter_friday">F</string>
    <string name="letter_saturday">S</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="monday_eng" translatable="false">monday</string>
    <string name="tuesday_eng" translatable="false">tuesday</string>
    <string name="wednesday_eng" translatable="false">wednesday</string>
    <string name="thursday_eng" translatable="false">thursday</string>
    <string name="friday_eng" translatable="false">friday</string>
    <string name="saturday_eng" translatable="false">saturday</string>
    <string name="confirm_reservation">Confirm reservation</string>
    <string name="sunday">Sunday</string>
    <string name="class_reservation_completed">Class reservation completed</string>
    <string name="close">Close</string>
    <string name="my_classes">My classes</string>
    <string name="class_reservation_removed">Class reservation removed</string>
    <string name="error_ocurred">An error has occurred, please try again later</string>
    <string name="app_name_2" translatable="false">Sport Center</string>
    <string name="btn_payments">Payments</string>
    <string name="btn_pay">Pay</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="current_fee">Current fee</string>
    <string name="currency_symbol">$</string>
    <string name="confirm_pay">Confirm Pay</string>
    <string name="class_reservation_incompleted">An error has occurred please try again later</string>
    <string name="payment_completed">Payment completed</string>
    <string name="payment_incomplete">An error has occurred please try again later</string>
    <string name="pay_status">Ststus: Paid</string>
    <string name="my_payments">My payments</string>
    <string name="class_already_booked">This class is already booked</string>
    <string name="fee_already_paid">The current fee (%s - %d) is already paid</string>
    <string name="pay_fee">Pay fee</string>
    <string name="notifications">Notifications</string>
    <string name="show">Show</string>
</resources>