<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grupo1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_item_classes"
            android:icon="@drawable/ic_classes"
            android:title="@string/classes" />
        <item
            android:id="@+id/nav_item_payments"
            android:icon="@drawable/ic_payments"
            android:title="@string/payments" />
    </group>

    <group
        android:id="@+id/grupo2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_four"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>