<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".vistas.ClassReserveActivity">

    <include
        android:id="@+id/include"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dayButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:layout_editor_absoluteX="-16dp">

        <Button
            android:id="@+id/btnMonday"
            android:tag="@string/monday_eng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/letter_monday"
            app:layout_constraintEnd_toStartOf="@+id/btnTuesday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnTuesday"
            android:tag="@string/tuesday_eng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/letter_tuesday"
            app:layout_constraintEnd_toStartOf="@+id/btnWednesday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnMonday"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnWednesday"
            android:tag="@string/wednesday_eng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/letter_wednesday"
            app:layout_constraintEnd_toStartOf="@+id/btnThursday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnTuesday"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnThursday"
            android:tag="@string/thursday_eng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/letter_thursday"
            app:layout_constraintEnd_toStartOf="@+id/btnFriday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnWednesday"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFriday"
            android:tag="@string/friday_eng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/letter_friday"
            app:layout_constraintEnd_toStartOf="@+id/btnSaturday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnThursday"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSaturday"
            android:tag="@string/saturday_eng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/letter_saturday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnFriday"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtCurrenDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayButtonContainer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listTimeRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCurrenDay"
        tools:listitem="@layout/item_time" />

</androidx.constraintlayout.widget.ConstraintLayout>